# SimVBG

./: .gitignore  CROSS_CHECKING.md  README.md  pyproject.toml
legacy/: MAPPING.md
simvbg/: __init__.py  actor.py  backend.py  splits.py  types.py  wvs.py
simvbg/prompts/: __init__.py  coordinator.txt  prompt_affective.txt  prompt_behavioral.txt  prompt_cognitive.txt  prompt_single.txt  storymodule.txt
tests/: test_behavior_equivalence.py
